<resources>
    <string name="latest_product">LATEST PRODUCTS</string>
    <string name="most_sold">MOST SOLD</string>
    <string name="people_also_bought">PEOPLE ALSO BOUGHT</string>
    <string name="special_price">Special Price</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="special_offer">Special Offers</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="language">Language</string>
    <string name="profile">Profile</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="wish_list">Wish list</string>
    <string name="view">View</string>
    <string name="total">Total</string>
    <string name="status">Status</string>
    <string name="date_order">Date Order</string>
    <string name="order">Order</string>
    <string name="date">Date</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="order_detail">Order Detail</string>
    <string name="contact_us">Contact Us</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your Message</string>
    <string name="app_name">Auto Works</string>
    <string name="hash_secret_salt">2jmj7l5rSw0yVb</string>
    <string name="facebook_app_id">534187823387399</string>
    <string name="map_api_key">AIzaSyBuJcNW-KIXfU9nV6qpSo8iXt3fmHD5B4A</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="onSectionAttached_fragment_home">Home</string>
    <string name="onSectionAttached_fragment_profile">User Profile</string>
    <string name="onSectionAttached_fragment_login">Login</string>
    <string name="onSectionAttached_fragment_register">Register</string>
    <string name="home_tab_caption_1">Products</string>
    <string name="home_tab_caption_2">Collections</string>
    <string name="home_tab_caption_3">Member</string>
    <string name="fragment_login_title">Login</string>
    <string name="title_activity_login_and_register">LoginAndRegister</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onSectionAttached_order_management">Order History</string>
    <string name="onSectionAttached_fragment_order_management">Order History</string>
    <string name="onSectionAttached_fragment_myproduct">My Products</string>
    <string name="empty_string"></string>
    <string name="hint_password">Password</string>
    <string name="hint_spinner_category">Choose a category</string>
    <string name="hint_new_pasword">New password</string>
    <string name="hint_retype_pasword">Retype</string>
    <string name="error_input_emmpty">This field can not be empty!</string>
    <string name="error_password_length">at least 6 chars!</string>
    <string name="error_old_password_doesnt_match">old password does not match!</string>
    <string name="error_password_doesnt_match">does not match!</string>
    <string name="error_no_products">No products to show.</string>
    <string name="success_contactus">Your contact infomation has been sent to us. We will contact you soon.</string>
    <string name="login_error">Login failed.</string>
    <string name="login_duplicate_error">Duplicate user email.</string>
    <string name="onSectionAttached_fragment_home_product">Products</string>
    <string name="onSectionAttached_fragment_myproduct_edit">Sửa sản phẩm</string>
    <string name="confirm_mycart">Xác nhận đơn hàng</string>
    <string name="dialog_title_select_category">Please select category</string>
    <string name="dialog_title_select_sort">Please select sort method</string>
    <string name="button_order_history">Order history</string>
    <string name="button_update_profile">Update Profile</string>
    <string name="item_almost_gone">Almost Gone!!!</string>
    <string name="item_last">Last Item!!!</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_registration">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_scpecial_offer">Special Offer</string>
    <string name="menu_shopping_cart">Shopping Cart</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_profile">Your Profile</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_map">Map</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="complete_order">Your order is submitted, we will contact you soon.</string>
    <string name="check_box_new_address">New shipping and payment address</string>
    <string name="select_shipping">Select a shipping method:</string>
    <string name="select_payment">Select a payment method:</string>
    <string name="err_select_shipping">You must select shipping method first.</string>
    <string name="err_select_payment">You must select payment method  first.</string>
    <string name="err_complete_all_field">You must fill in all the blank fields.</string>
    <string name="search_text">Finding products for keyword: </string>
    <string name="spinner_select_country">Select your country...</string>
    <string name="spinner_select_zone">Select your city</string>
    <string name="forgotten_password_text">Your password has been reset. Please check your email then login again.</string>
    <string name="order_history">Order History</string>
    <string name="Loading">Loading</string>
    <string name="Chat">Chat</string>
    <string name="type_msg">Type Message</string>
    <string name="Chatting_Channel">Chatting Channel</string>
    <string name="choose_label">Choose</string>
    <string name="cancel_label">Cancel</string>
    <string name="billing_support">Billing support</string>
    <string name="technical_support">Technical support</string>
</resources>