<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/GenericProgressBackground"
        android:id="@+id/productCheckoutLoadingPanel"
        android:visibility="gone"
        >
        <ProgressBar
            style="@style/GenericProgressIndicator"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/order_ship_layout_banner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">

            <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:id="@+id/imageView4"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:src="@drawable/forgot_bannerbackground" />-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/imageView5"-->
            <!--android:src="@drawable/forgot_logo"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="10dp" />-->

            <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/order_ship_back"-->
            <!--android:src="@drawable/forgot_menu"-->
            <!--android:layout_margin="20dp" />-->
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imageView4"
                android:background="#ed3a24">

                <TextView
                    android:id="@+id/order_ship_subbanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/order_detail"
                    android:textColor="#fff"
                    android:textSize="24dp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/order_ship_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/order_ship_layout_tittle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#f2f3f4">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="31dp"
                    android:text="@string/product"
                    android:textColor="#959595"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_toEndOf="@+id/textView"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_centerVertical="true"
                    android:text="@string/price"
                    android:textColor="#959595"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_centerVertical="true"
                    android:text="@string/quantity"
                    android:textColor="#959595"
                    android:layout_marginStart="30dp"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:text="@string/total"
                    android:textColor="#959595"
                    android:textSize="12dp" />

                <!--<TextView-->
                <!--android:id="@+id/textView5"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:layout_marginStart="15dp"-->
                <!--android:layout_toEndOf="@+id/textView4"-->
                <!--android:layout_toRightOf="@+id/textView4"-->
                <!--android:text="Shipping"-->
                <!--android:textColor="#959595"-->
                <!--android:textSize="12dp" />-->
            </RelativeLayout>


            <ListView
                android:id="@+id/orderListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>
