<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#eaebec"
    >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:background="@drawable/rounded_conner_light"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:padding="20dp">

            <EditText
                android:id="@+id/customer_password"
                android:layout_width="fill_parent"
                android:layout_height="40dp"

                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:ems="10"
                android:hint="@string/hint_password"

                android:paddingLeft="20dp"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_foreground_material_light"
                android:textSize="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="12dp"
                android:ems="10"
                android:id="@+id/customer_new_password"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                android:hint="@string/hint_new_pasword"
                android:paddingLeft="20dp"
                android:textColor="#000000"
                android:inputType="textPassword"
                android:textColorHint="@color/hint_foreground_material_light"
                android:layout_below="@+id/customer_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:textSize="12dp"
                android:id="@+id/customer_confirm_new_password"
                android:background="#ffffff"
                android:hint="@string/hint_retype_pasword"
                android:paddingLeft="20dp"
                android:textColor="#000000"

                android:inputType="textPassword"
                android:layout_below="@+id/customer_new_password"
                android:textColorHint="@color/hint_foreground_material_light"
                android:layout_marginTop="5dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/customer_confirm_new_password"
                android:layout_marginTop="20dp"
                android:background="#ed3a24"
                android:id="@+id/change_password_send">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SEND"
                    android:id="@+id/change_password_send_text"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="24dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>