<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="160dp"
    android:id="@+id/special_product_layout"
    android:layout_below="@+id/cart_layout_banner"
    android:layout_marginBottom="10dp">


        <RelativeLayout
            android:id="@+id/rl_sepctial_offers_item_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120dp"
                android:maxWidth="120dp"
                android:id="@+id/product_image"
                android:src="@drawable/no_product_image"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView8"
                android:src="@drawable/special_funny1"
                android:layout_above="@+id/imageView2"
                android:layout_alignStart="@+id/product_image"
                android:layout_marginBottom="10dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/rl_sepctial_offers_item_image">
            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/product_add_to_cart"
                android:layout_below="@+id/product_special_price_text"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ed3a24">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_cart"
                    android:id="@+id/product_add_cart_text"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="10dp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:id="@+id/product_add_to_wish_list"
                android:layout_alignTop="@+id/product_add_to_cart"
                android:layout_toEndOf="@+id/product_add_to_cart"
                android:background="#ed3a24">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_wishlist"
                    android:id="@+id/product_add_wish_text"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="10dp" />
            </RelativeLayout>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView21"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/cart_split" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="Apple Macbook Pro MD101LL/A 13.3&quot; Intel Core i5 2.5GHz 4GB Mac "
                android:id="@+id/product_tittle"
                android:layout_alignTop="@+id/product_image"
                android:layout_toEndOf="@+id/product_image"
                android:textColor="#000"
                android:textStyle="bold|normal"
                android:textSize="14dp"
                android:textIsSelectable="false"
                android:layout_marginStart="5dp" />


            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="This special Apple Macbook Pro MD101LL/A 13.3&quot; Intel Core i5 2.5GHz 4GB Mac is for sale over 50%"
                android:id="@+id/product_short_description"
                android:layout_below="@+id/product_tittle"
                android:layout_toEndOf="@+id/product_image"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textStyle="normal"
                android:textSize="11dp"
                android:textIsSelectable="false"
                android:layout_marginStart="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$1,099.00"
                android:id="@+id/product_price"
                android:textColor="#959595"
                android:textStyle="bold"
                android:textSize="12dp"
                android:autoText="false"
                android:layout_below="@id/product_short_description"
                android:layout_toEndOf="@+id/product_image"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"/>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_price"
                android:id="@+id/product_special_price_text"
                android:layout_below="@+id/product_price"
                android:layout_alignStart="@+id/product_price"
                android:textColor="#959595"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$1800.99"
                android:id="@+id/product_price_special"
                android:layout_toEndOf="@+id/product_special_price_text"
                android:layout_alignBottom="@+id/product_special_price_text"
                android:textColor="#fe0101"
                android:textSize="12dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />
        </RelativeLayout>

</RelativeLayout>